# iterated_prisioners_dilemma

./: Cargo.toml  PENDING_STRATEGIES.md  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/strategies/: adaptative_strategy.rs  always_cooperate.rs  always_defect.rs  configurable_generous_tit_for_tat.rs  custom_random.rs  cycler.rs  firm_majority.rs  forgiving.rs  generous_tit_for_tat.rs  gradual.rs  gradual_tit_for_tat.rs  grim_trigger.rs  hard_tit_for_tat.rs  imperfect_tit_for_tat.rs  looker_up.rs  majority.rs  mod.rs  omega_tit_for_tat.rs  probability_cooperator.rs  random.rs  reverse_tit_for_tat.rs  soft_majority.rs  stochastic_tit_for_tat.rs  suspicious_tit_for_tat.rs  tester.rs  tit_for_tat.rs  tit_for_two_tats.rs  two_tit_for_tats.rs  win_stay_lose_shift.rs  win_stay_lose_shift_axelrod.rs
src/strategies/parameter_examples/: adaptive_params.json  configurable_generous_tft_params.json  cycler_params.json  cycler_params2.json  forgiving_params.json  gtft_params.json  imperfect_tit_for_tat_params.json  looker_up_params_length2.json  looker_up_params_length3.json  majority_params.json  omega_tit_for_tat_params.json  prob_coop_params.json  sto_tft_params.json
