[package]
name = "iterated_prisioners_dilemma"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
inventory = "0.3.20"
rand = "0.9.1"

[lib]
name = "iterated_prisoners_dilemma_lib"
path = "src/lib.rs"

[[bin]]
name = "ipd-simulator"
path = "src/main.rs"